--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/logoSodality"
         android:layout_width="293dp"
         android:layout_height="261dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="24dp"
         app:srcCompat="@drawable/logo_sodality"
 
         app:layout_constraintTop_toTopOf="parent"
@@ -24,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:letterSpacing="0.1"
         android:fontFamily="@font/quicksand"
         android:text="@string/logoName"
         android:gravity="center"
@@ -36,7 +37,7 @@
         android:id="@+id/firstPageText1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="95dp"
         android:fontFamily="@font/quicksand_light"
         android:gravity="center"
         android:text="@string/firstPageText1"
@@ -60,10 +61,11 @@
 
     <Button
         android:id="@+id/firstPageButton1"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="340dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@color/white"
+
         android:textColor="@color/grey"
         android:fontFamily="@font/quicksand_medium"
         android:textSize="18sp"
@@ -80,9 +82,9 @@
         android:text="@string/firstPageButonText2"
         android:fontFamily="@font/quicksand_medium"
         android:textAllCaps="false"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="18dp"
+        android:layout_width="340dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="10dp"
         android:textSize="18sp"
         android:backgroundTint="@color/green"
         android:elevation="1dp"
