--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="#000"/>
-            <corners android:radius="7dp"/>
-        </shape>
-    </item>
+    <solid android:color="@color/white"/>
+    <corners android:radius="7dp"/>
 
-</layer-list>
+</shape>
