--- a/app/src/main/res/layout/activity_loging_in2.xml
+++ b/app/src/main/res/layout/activity_loging_in2.xml
@@ -7,7 +7,7 @@
     tools:context=".LogingInActivity">
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/logingPageButton1"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/arrow"
@@ -18,14 +18,144 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-
-        android:layout_marginTop="148dp"
+    <TextView
+        android:id="@+id/logingPageText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="200dp"
+        android:layout_marginTop="160dp"
+        android:fontFamily="@font/quicksand"
+        android:text="@string/e_mail_or_phone"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/logingPageText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/quicksand"
+        app:layout_constraintHorizontal_bias="0"
+        android:layout_marginTop="23dp"
+        android:text="@string/password"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/editTextPhone2"
+        app:layout_constraintStart_toStartOf="@+id/editTextPhone2"
+        app:layout_constraintTop_toBottomOf="@+id/editTextPhone2" />
+
+    <TextView
+        android:id="@+id/logingPageForgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/quicksand_light"
+        android:text="@string/forgot_password"
+        android:layout_marginTop="15dp"
+        android:textSize="12sp"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
+        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+
+
+
+    <Button
+        android:id="@+id/firstPageButton1"
+        android:layout_width="320dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="59dp"
+        android:background="@drawable/custom_button"
+        android:backgroundTint="@color/white"
+        android:elevation="1dp"
+        android:fontFamily="@font/quicksand_medium"
+        android:text="@string/firstPageButonText1"
+        android:textAllCaps="false"
+        android:textColor="@color/grey"
+        android:textSize="18sp"
+        android:translationZ="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logingPageForgotPassword" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="380dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop ="51dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/firstPageButton1"
+        app:srcCompat="@drawable/ghw" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="14dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2">
+
+        <ImageView
+            android:id="@+id/wk"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/wk"
+            android:layout_marginStart="40dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/facebook"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="21dp"
+            android:src="@drawable/facebook"
+            app:layout_constraintStart_toEndOf="@+id/wk"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/google"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="21dp"
+            android:src="@drawable/google"
+            app:layout_constraintStart_toEndOf="@+id/facebook"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/twitter"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="21dp"
+            android:src="@drawable/twitter"
+            app:layout_constraintStart_toEndOf="@+id/google"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <EditText
+        android:id="@+id/editTextTextPassword"
+        android:layout_width="330dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="@+id/logingPageText2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/logingPageText2"
+        app:layout_constraintTop_toBottomOf="@+id/logingPageText2" />
+
+    <EditText
+        android:id="@+id/editTextPhone2"
+        app:layout_constraintHorizontal_bias="0"
+        android:layout_width="330dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="phone"
+        app:layout_constraintEnd_toEndOf="@+id/logingPageText1"
+        app:layout_constraintStart_toStartOf="@+id/logingPageText1"
+        app:layout_constraintTop_toBottomOf="@+id/logingPageText1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
