--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,15 +9,13 @@
     <ImageView
         android:id="@+id/logoSodality"
         android:layout_width="wrap_content"
-        android:layout_height="320dp"
-        android:layout_marginTop="24dp"
-        app:srcCompat="@drawable/logo_goalee"
+        android:layout_height="300dp"
+        android:layout_marginTop="34dp"
         android:adjustViewBounds="true"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_goalee" />
 
     <TextView
         android:id="@+id/logoName"
@@ -37,7 +35,7 @@
         android:id="@+id/firstPageText1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="70dp"
         android:fontFamily="@font/quicksand_light"
         android:gravity="center"
         android:text="@string/firstPageText1"
@@ -61,17 +59,17 @@
 
     <Button
         android:id="@+id/firstPageButton1"
-        android:layout_width="340dp"
+        android:layout_width="320dp"
         android:layout_height="55dp"
         android:layout_marginTop="20dp"
-        android:backgroundTint="@color/white"
         android:background="@drawable/custom_button"
-        android:textColor="@color/grey"
+        android:backgroundTint="@color/white"
+        android:elevation="1dp"
         android:fontFamily="@font/quicksand_medium"
-        android:textSize="18sp"
         android:text="@string/firstPageButonText1"
         android:textAllCaps="false"
-        android:elevation="1dp"
+        android:textColor="@color/grey"
+        android:textSize="18sp"
         android:translationZ="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,22 +77,21 @@
 
     <Button
         android:id="@+id/firstPageButton2"
-        android:text="@string/firstPageButonText2"
-        android:fontFamily="@font/quicksand_medium"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:layout_width="340dp"
+        android:layout_width="320dp"
         android:layout_height="55dp"
         android:layout_marginTop="10dp"
-        android:textSize="18sp"
         android:background="@drawable/custom_button"
         android:backgroundTint="@color/green"
         android:elevation="1dp"
+        android:fontFamily="@font/quicksand_medium"
+        android:text="@string/firstPageButonText2"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         android:translationZ="1dp"
-        app:layout_constraintTop_toBottomOf="@id/firstPageButton1"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/firstPageButton1" />
 
 
 
